    - fixed tracker.exe not found in VS2015 and VS2017
    - new project option "Add import paths of project dependencies"
    - fixed Compile and Run/Debug if building through MS-COFF and not having VS selected in sc.ini
    - /MAPINFO: remove ancient options no longer supported by the MS linker
    - separated compile and link into two batches so compile skipped if only link inputs changed
    - dependency monitoring: added option to specify files/folders to exclude from dependency check
    - mark html output log as UTF-8 encoded
  * editor
    - fix crash when editing dub.json when part of a project
    - added task list support for files loaded into the editor
  * installation
    - read default DMD installation path from Visual D or DMD registry key, if not available in VS registry hive
    - UCRT version detection: ignore directories that do not start with a digit (e.g. from DDK)
    - bugzilla Issue 17384: fix default executable search path for LDC/x64 under VS2017
  * cpp2d: add missing default to switch(), ensure space between identifiers, fix module name for translated C-files
  * DParser semantic engine:
    - added support for function attributes @nogc and scope, align(expression)
    - cache semantic results until next edit
    - break endless loop due to unresolved selective import
    - fix for no expansions for symbols from public import in imported module
    - try dparser as fallback if goto definition on import fails
    - fix exception in isExpression

2017-08-06 Version 0.45.1

  * now building against the VC runtime (-m32mscoff) instead of the DigitalMars runtime to avoid 
    anti-virus programs blocking the installation or execution
  * fix dependencies for custom build rules if file names contain spaces
  * mago: fix displaying long strings as empty
  * pipedmd: fix tracker invocation if the VS2015 version is found through PATH
  * update vsi2d to Windows SDK 10.0.15063.0
  * Visual D now buildable with VS2017